# sguil

./: .gitignore  CHANGES  INSTALL  LICENSE  README  README.md  USAGE  andreas02.css  contact.html  docs.html  downloads.html  flashdemo.html  index.html  news.html  print.css  screenshots.html  sguil.conf  sguil.tk  sguild  tour.html
categories/: 1.html  2.html  3.html  4.html  5.html  6.html  7.html
client/: sguil.conf  sguil.tk  sguilspeak.txt
client/lib/: SguilAutoCat.tcl  SguilElasticSearch.tcl  SguilPcapLauncher.tcl  SguilUtil.tcl  dkffont.tcl  email17.tcl  extdata.tcl  guilib.tcl  nessusheader.html  qrybuild.tcl  qrylib.tcl  report.tcl  sancp.tcl  sellib.tcl  sound.tcl  stdquery.tcl  whois.tcl
client/lib/tablelist4.1/: COPYRIGHT.txt
client/lib/tablelist4.1/images/: DarkLineDown10x9.xbm  DarkLineDown12x11.xbm  DarkLineDown8x7.xbm  DarkLineUp10x9.xbm  DarkLineUp12x11.xbm  DarkLineUp8x7.xbm  LightLineDown10x9.xbm  LightLineDown12x11.xbm  LightLineDown8x7.xbm  LightLineUp10x9.xbm  LightLineUp12x11.xbm  LightLineUp8x7.xbm  TriangleDown10x9.xbm  TriangleDown12x11.xbm  TriangleDown7x4.xbm  TriangleDown7x7.xbm  TriangleDown8x5.xbm  TriangleDown8x7.xbm  TriangleDown9x5.xbm  TriangleUp10x9.xbm  TriangleUp12x11.xbm  TriangleUp7x4.xbm  TriangleUp7x7.xbm  TriangleUp8x5.xbm  TriangleUp8x7.xbm  TriangleUp9x5.xbm  checked.xbm  unchecked.xbm
client/lib/tablelist4.1/scripts/: repair.tcl  tablelistBind.tcl  tablelistConfig.tcl  tablelistEdit.tcl  (+5 more)
client/lib/tablelist5.11/: COPYRIGHT.txt  pkgIndex.tcl  tablelist.tcl  tablelistPublic.tcl  tablelist_tile.tcl
client/lib/tablelist5.14/: CHANGES.txt  COPYRIGHT.txt  README.txt  pkgIndex.tcl  tablelist.tcl  tablelistPublic.tcl  tablelist_tile.tcl
contrib/: quickscript.tcl  xscript2html.tcl
contrib/rulemanager/sensor/: Makefile  config.h  extractrules.c  extractrules.h  rulefunctions.c
contrib/rulemanager/server/: loadrules.pl
contrib/rulemanager/wwwgui/: index.html  rman.css  rman_common.inc  rman_formclasses.inc  rman_group.php  rman_groupclasses.inc  rman_index.php  rman_rule.php  rman_ruleclasses.inc  rman_sensor.php  rman_status.php  rman_vars.php
doc/: CHANGES  FAQ  INSTALL  INSTALL.openbsd  OPENSSL.README  TODO  UPGRADE  USAGE  sguildb.dia
downloads/rpm/: MD5SUM  barnyard-0.2.0-idslite.0.fdr.1.i386.rpm  barnyard-0.2.0-idslite.0.fdr.1.src.rpm  barnyard-debuginfo-0.2.0-idslite.0.fdr.1.i386.rpm  barnyard-mysql-0.2.0-idslite.0.fdr.1.i386.rpm  dshieldpy-3.2-idslite.1.noarch.rpm  dshieldpy-3.2-idslite.1.src.rpm  sancp-1.5.5-idslite.1.i386.rpm  sancp-1.5.5-idslite.1.src.rpm  sancp-debuginfo-1.5.5-idslite.1.i386.rpm  sguil-sensor-0.4.0-idslite.1.noarch.rpm  sguil-sensor-0.4.0-idslite.1.src.rpm  sguil-server-0.4.0-idslite.1.noarch.rpm  sguil-server-0.4.0-idslite.1.src.rpm  snort-2.1.2-idslite.0.fdr.1.i386.rpm  snort-2.1.2-idslite.0.fdr.1.src.rpm  snort-debuginfo-2.1.2-idslite.0.fdr.1.i386.rpm
images/: front.jpg.bak
media/: SguilConsole-BigOne.swf
pkgbuild/rpm/: sguil-client.spec  sguil-sensor.spec  sguil-server.spec  sguild.init  sguild.sysconfig  snort.org.spec.diff
pkgbuild/win32/: sguil-client.nsi
sensor/: README.daemonlogger  README.sancp_indexed_pcap  example_agent.conf  example_agent.tcl  log_packets-daemonlogger.sh  log_packets-sancp.sh  log_packets.sh  pads_agent.conf  pads_agent.tcl  pcap_agent-sancp.conf  pcap_agent-sancp.tcl  pcap_agent.conf  pcap_agent.tcl  portscan_loader.tcl  sancp-indexed.conf  sancp_agent.conf  sancp_agent.tcl  sensor_agent.conf  sensor_agent.tcl  snort_agent.conf  snort_agent.tcl  suricata_agent.conf  suricata_agent.tcl
sensor/barnyard_mods/: README  barnyard.patch  configure.in  op_plugbase.c.patch  op_sguil.c  op_sguil.h  patch_barnyard.sh
sensor/contrib/: pcap-agent.service  portscan_loader.c  serviceunit.README  snort-agent.service
sensor/contrib/ossec_agent/: README  ossec_agent.conf  ossec_agent.tcl
sensor/contrib/portscan_loader/: Makefile
sensor/init/: sensoragent
sensor/sancp/: sancp.conf
sensor/snort_mods/1_9/: spp_portscan.c  spp_stream4.c  spp_stream4.c.diff
sensor/snort_mods/2_0/: spp_portscan_sguil.patch  spp_stream4_sguil.patch
sensor/snort_mods/2_1/: spp_portscan_sguil.patch  spp_stream4_sguil.patch
server/: archive_sguildb.tcl  autocat.conf  sguild  sguild.access  sguild.conf  sguild.email  sguild.queries  sguild.reports  sguild.users  xscriptd
server/contrib/: incident_report.tcl  logstash_sguil.conf  sguild.service
server/contrib/ElasticSearch/: logstash_sguil.conf  sguil_http.json  sguil_template.json
server/contrib/init/: sguil  sguild
server/html/: index.html  sguilclient.js
server/html/css/: buttons.css  checkbox.css  sguilclient.css  signin.css  tabulator-sguil.css  tabulator.css
server/html/sguilclient/: controllers.js  directives.js  sguilclientService.js  websocketService.js
server/lib/: SguildAccess.tcl  SguildAutoCat.tcl  SguildClientCmdRcvd.tcl  SguildConnect.tcl  SguildCreateDB.tcl  SguildEmailEvent.tcl  SguildEvent.tcl  SguildGenericDB.tcl  SguildGenericEvent.tcl  SguildHealthChecks.tcl  SguildHttpsd.tcl  SguildLoaderd.tcl  SguildMysqlMerge.tcl  SguildPadsLib.tcl  SguildQueryd.tcl  SguildReportBuilder.tcl  SguildSendComms.tcl  SguildSensorAgentComms.tcl  SguildSensorCmdRcvd.tcl  SguildSimpleWhois.tcl  SguildTranscript.tcl  SguildTranscript.tcl.bak  SguildUtils.tcl  SguildWebSocket.tcl  SguildWhois.tcl
server/sql_scripts/: autocat2mysql.tcl  create_ruledb.sql  create_sancp_table.sql  create_sguildb.sql  migrate_event.tcl  migrate_sancp.tcl  nessus.sql  sancp_cleanup.tcl  update_0.7.tcl  update_0.8.tcl  update_sguildb_v10-v11.sql  update_sguildb_v11-v12.sql  update_sguildb_v12-v13.sql  update_sguildb_v13-v14.sql  update_sguildb_v5-v6.sql  update_sguildb_v6-v7.sql  update_sguildb_v7-v8.sql  update_sguildb_v8-v9.sql  update_sguildb_v9-v10.sql
web/: about.php  alert_detail.php  alerts.php  config.js  config.php  css.php  hostlookup.php  incident_categories.php  index.php  jscript_functions.php  lookup_frameset.php  menu.js  overlib.js  sessions.php  sguil_functions.php  std_functions.php  tabs.php
web/data/: LICENSE.txt
(+74 files in other folders)
